# ChangeLog for sys-apps/hal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.310 2009/12/11 15:52:37 armin76 Exp $

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org> hal-0.5.13-r2.ebuild:
  sh stable wrt #287380

  07 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> hal-0.5.13-r2.ebuild:
  amd64 stable wrt #287411

  02 Dec 2009; Daniel Gryniewicz <dang@gentoo.org> +hal-0.5.14.ebuild:
  Bump to 0.5.14

*hal-0.5.14 (02 Dec 2009)

  02 Dec 2009; Daniel Gryniewicz <dang@gentoo.org> +hal-0.5.14.ebuild:
  Bump to 0.5.14

  29 Nov 2009; Joseph Jezak <josejx@gentoo.org> hal-0.5.13-r2.ebuild:
  Marked ppc stable for bug #287380.

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> hal-0.5.13-r2.ebuild:
  ia64/sparc stable wrt #287380

  23 Nov 2009; Markus Meier <maekke@gentoo.org> hal-0.5.13-r2.ebuild:
  arm stable, bug #287380

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org> hal-0.5.13-r2.ebuild:
  stable x86, bug 287380

  31 Oct 2009; Brent Baude <ranger@gentoo.org> hal-0.5.13-r2.ebuild:
  Marking hal-0.5.13-r2 ppc64 for bug 287380

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> hal-0.5.13-r2.ebuild:
  Stable for HPPA (bug #287380).

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild:
  stable x86, bug 284742

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild, hal-0.5.13-r2.ebuild:
  Stable on alpha, bug #287380

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild:
  Stable on alpha, bug #284742

*hal-0.5.12_rc1-r8 (30 Sep 2009)

  30 Sep 2009; Mart Raudsepp <leio@gentoo.org> hal-0.5.12_rc1-r7.ebuild,
  +hal-0.5.12_rc1-r8.ebuild, hal-0.5.13-r2.ebuild:
  Remove now unnecessary gnome-power-manager blocker, all revisions of it
  that could file collide with hal are gone now and it included the 2.22
  versions in the blocker, which was not necessary and is problematic with