@@ -15,6 +15,6 @@ EBUILD hal-0.5.12_rc1-r6.ebuild 9821 RMD160 3861e904a70e10534fbde7af2c2c88f46f15
 EBUILD hal-0.5.12_rc1-r7.ebuild 9769 RMD160 95a92aa81f15944ef2f10b425933f2dfb5418dbb SHA1 bc45ad8afdadf32cf745cb417d3dd14cac55edf7 SHA256 818095452fa1458bc069a3fbb56f853ee91bfa4208d04706e5b471e242f0af3d
 EBUILD hal-0.5.12_rc1-r8.ebuild 9668 RMD160 54494d2f817d932db9350595e81a9870870d6809 SHA1 1bf9009c77de925fed98f2817ebe0b5a85260abb SHA256 83a08f6d6827ca290cfaca916119f8be8f7842db965e614114f97aff492b4b6f
 EBUILD hal-0.5.13-r2.ebuild 9793 RMD160 dcd8f938dccd0decc0134a06be9a628ea5c0954e SHA1 c3f8d1beb9ed79d885da59bd97294d4795e42775 SHA256 a35466fa8b1cfee9963fe72aef729a28c3528ee10dd59bf87d3175e033c09757
-EBUILD hal-0.5.14.ebuild 9796 RMD160 c227f5b8ff9652166d9da8f33edf2087eed0d7b7 SHA1 5bea7dd43bf4c03cc7ead20144db93615fdedf1d SHA256 eb01affa897916dd8d2129e13cc56fdb24909236c7ce0fb4af62fb810d337950
-MISC ChangeLog 55033 RMD160 0f6ef0724527cd8c29da56f68913add9a8f2ba58 SHA1 a46817ce0877363f6de64a8a62c9455387ac5f68 SHA256 5fbf87dd79000e00a4c13b11d91f6bce316c84e6634b0f52ef41238c04f98024
+EBUILD hal-0.5.14.ebuild 9865 RMD160 5f2c448e12431680ef3691fc0df49889f45fef1b SHA1 64dcc78ddda9c8a455fa5910203ce8bbfd5a5554 SHA256 9af3aa58cbad6ae47ee67b3da8e205c13c0a0c1113f85c7d0db181f5a587c5a4
+MISC ChangeLog 55234 RMD160 08a3aa8f5524fbef2c29687b5a5b69a96f2fbdcc SHA1 7ef030808123edfa6ef96ca123314fa339268415 SHA256 54e0ceb360ede4efbf78c3a4a35e464112782502be6cac9d123806ec88c79b4b
 MISC metadata.xml 2017 RMD160 90b6fed11f5582fce64fe36354e94b811478d21e SHA1 2b2693c7d677adf363e41e16cc71787fbe01d383 SHA256 910ab10f73ca0bccdea716f39dd3d3cc3d594bd25f6bbb7e25b70082be194048
